feat: Add time to workout.date